<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_14sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:textStyle="bold"
        android:text="@string/account_login" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textSize="@dimen/_11sdp"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textSize="@dimen/_11sdp"
        android:inputType="textPassword"
        tools:ignore="Autofill" />

    <LinearLayout
        android:id="@+id/llLoginRememberPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="horizontal"
        android:weightSum="1"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/ivRememberPassword"
            android:layout_width="@dimen/_12sdp"
            android:layout_height="@dimen/_12sdp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/content_description"
            android:src="@drawable/drawable_button_in_selected" />

        <TextView
            android:id="@+id/tvRememberPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_weight="1"
            android:text="@string/loginRememberPassword"
            android:textColor="@android:color/tab_indicator_text"
            android:textSize="@dimen/_10sdp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_11sdp"
        android:text="@string/login" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:gravity="end"
        android:textColor="@color/colorAccent"
        android:text="@string/register"
        android:textStyle="italic|bold" />
</LinearLayout>